[gd_scene load_steps=10 format=3 uid="uid://breroar7ddmc8"]

[ext_resource type="Script" path="res://scripts/mini_games/knife_throwing/knife_throwing.gd" id="1_g8mqh"]
[ext_resource type="PackedScene" uid="uid://cxny6ekgbhs4k" path="res://scenes/mini_games/knife_throwing/range_bar.tscn" id="1_q3173"]
[ext_resource type="PackedScene" uid="uid://bcb2f8o11jadh" path="res://scenes/ui/submenu.tscn" id="3_gnbih"]
[ext_resource type="AudioStream" uid="uid://jefhdxpl24sw" path="res://assets/audio/sfx/KnifeThrow/KnifeThrow1.mp3" id="4_157vp"]
[ext_resource type="AudioStream" uid="uid://dmvwd2upnfkmu" path="res://assets/audio/sfx/KnifeThrow/KnifeThrow2.mp3" id="5_ec456"]
[ext_resource type="AudioStream" uid="uid://d2pc7muam0hqh" path="res://assets/audio/sfx/DoneSomething/Done_Something Right.mp3" id="6_e70ym"]
[ext_resource type="AudioStream" uid="uid://cgpqqqtw431pf" path="res://assets/audio/sfx/DoneSomething/DoneSomethingWrong.wav" id="7_66ha8"]

[sub_resource type="Curve2D" id="Curve2D_trhui"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 280, 544, 0, 0, 0, 0, 416.51, 543.229, 0, 0, 0, 0, 609.844, 544.497, 0, 0, 0, 0, 872, 544)
}
point_count = 4

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xjvk2"]

[node name="KnifeThrowing" type="Node2D"]
script = ExtResource("1_g8mqh")

[node name="AimPath" type="Path2D" parent="."]
position = Vector2(-578, -294)
curve = SubResource("Curve2D_trhui")

[node name="PathFollow" type="PathFollow2D" parent="AimPath"]
position = Vector2(280, 544)
rotation = -0.00564785
loop = false

[node name="AimBar" type="Area2D" parent="AimPath/PathFollow"]
z_index = 4

[node name="CollisionShape" type="CollisionShape2D" parent="AimPath/PathFollow/AimBar"]
scale = Vector2(0.3, 4)
shape = SubResource("RectangleShape2D_xjvk2")

[node name="ColorRect" type="ColorRect" parent="AimPath/PathFollow/AimBar/CollisionShape"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Perfect" parent="." instance=ExtResource("1_q3173")]
z_index = 3
position = Vector2(0, 248)
width_scale = 0.1
color = Color(0.298031, 0.694352, 7.70092e-07, 1)

[node name="Good" parent="." instance=ExtResource("1_q3173")]
z_index = 2
position = Vector2(0, 248)
width_scale = 0.4
color = Color(0.887235, 0.453811, 5.77569e-07, 1)

[node name="Average" parent="." instance=ExtResource("1_q3173")]
z_index = 1
position = Vector2(0, 248)
width_scale = 0.7
color = Color(0.668524, 0.592517, 0, 1)

[node name="Missed" parent="." instance=ExtResource("1_q3173")]
position = Vector2(0, 248)
color = Color(0.67451, 0.67451, 0.67451, 1)

[node name="Tutorial" parent="." instance=ExtResource("3_gnbih")]
visible = false
text_content = "[center][b]Knife Throwing[/b][/center]

[center]Knife throwing requires excellent aim! Left click with the mouse to stop the white bar. Try to get as close to the green segment as possible. [/center]

"

[node name="KnifeThrow1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_157vp")

[node name="KnifeThrow2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_ec456")

[node name="DoneSomethingRight" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_e70ym")

[node name="DoneSomethingWrong" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_66ha8")

[connection signal="close_requested" from="Tutorial" to="." method="hide_tutorial"]
